# xb_mall

./: .gitignore  README.md  main.py  pyproject.toml
serve/: .env.example  .gitignore  .reloadignore  README_START.md  code.txt  main.py  pyproject.toml  requirements.txt
serve/config/: __init__.py  jwt_config.py  log_config.py  manage_permission_catalog.py  mongodb_config.py  redis_config.py  scheduler_config.py  sql_config.py
serve/data/data_mods/: __init__.py
serve/data/file_client/: __init__.py
serve/data/mongodb_client/: __init__.py
serve/data/redis_client/: __init__.py
serve/data/sql_client/: __init__.py
serve/data/sql_client_pool/: __init__.py
serve/migrations/: add_shopping_cart_name.sql
serve/routes/ad_banner_active/: __init__.py
serve/routes/add_address/: __init__.py
serve/routes/add_mall/: __init__.py
serve/routes/address_apply/: __init__.py
serve/routes/address_show/: __init__.py
serve/routes/apply_seller/: __init__.py
serve/routes/apply_seller_consent/: __init__.py
serve/routes/apply_seller_reject/: __init__.py
serve/routes/browsing_history/: __init__.py
serve/routes/buter_exit/: __init__.py
serve/routes/buter_get_classify/: __init__.py
serve/routes/buyer_activity/: __init__.py
serve/routes/buyer_ad_apply/: __init__.py
serve/routes/buyer_ad_apply_img/: __init__.py
serve/routes/buyer_ad_apply_list/: __init__.py
serve/routes/buyer_amend_user/: __init__.py
serve/routes/buyer_classify_add/: __init__.py
serve/routes/buyer_classify_delete/: __init__.py
serve/routes/buyer_classify_edit/: __init__.py
(+342 files in other folders)
